recursion.lessons.recursion.tree.Tree.scala.error
Tree:5: error: type mismatch;
 found   : Unit
 required: Int
	current(tree(steps-1, shrink*length,angle,shrink));
                    ^