recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	avance(length);
	droite(angle);
	current(tree(steps-1, shrink*length,angle,shrink));
	
}
